--- a/style.css
+++ b/style.css
@@ -4,23 +4,14 @@
 	overflow: hidden;
 }
 
-.image_phone {
-	width: 75%;
-    margin-top: -5%;
-    margin-left: 12.5%;
+.main_container {
+	display: flex;
+	justify-content: center;
 }
 
-@media (min-width: 400px) and (max-width: 500px) {
-	.image_phone {
-		width: 220%;
-    	margin-left: -57%;
-	}
-}
-
-@media (min-width: 300px) and (max-width: 399px) {
-	.image_phone {
-		width: 260%;
-    	margin-top: -10%;
-    	margin-left: -77.5%;
-	}
+.image_container {
+	position: absolute;
+    width: 65%;
+    height: 100%;
+    background: url(image.png) no-repeat center top / cover;
 }
