--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 * {
 	margin: 0;
 	padding: 0;
-	overflow: hidden;
 }
 
 .main_container {
@@ -14,4 +13,10 @@
     width: 65%;
     height: 100%;
     background: url(image.png) no-repeat center top / cover;
+}
+
+@media (min-width: 300px) and (max-width: 430px) {
+	.image_container {
+		width: 100%;
+	}
 }
